--- a/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
+++ b/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "Fine-tuning is the process of customizing an existing model using new data to improve performance on a specific task. Fine-tuning can offer valuable benefits: it can significantly improve performance for your specific use case and sometimes rival the results of more expensive, general-purpose models.\n",
     "\n",
-   "In this guide, you'll learn how to train a sentiment analysis model tailored to your data using <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a>. We'll walk through each step of the fine-tuning process—covering dataset setup, environment configuration, and batch inference. By following along, you'll discover how to leverage kluster.ai's powerful platform to create a custom model that boosts accuracy for financial text analysis and beyond."
+    "In this guide, you'll learn how to train a sentiment analysis model tailored to your data using <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a>. We'll walk through each step of the fine-tuning process—covering dataset setup, environment configuration, and batch inference. By following along, you'll discover how to leverage kluster.ai's powerful platform to create a custom model that boosts accuracy for financial text analysis and beyond."
    ]
   },
   {
@@ -162,7 +162,7 @@
     "id": "fb8c5014-5b0c-43c2-a238-073dbde2d90a"
    },
    "source": [
-    "## Fetch a real dataset for Batch inference\n",
+    "## Fetch a real dataset for batch inference\n",
     "\n",
     "This dataset contains a variety of financial news headlines, each labeled as positive, negative, or neutral. In this context, positive indicates a beneficial impact on the company’s stock, negative suggests a detrimental impact, and neutral implies no significant change is expected.\n",
     "\n",
@@ -201,7 +201,7 @@
     "id": "0a03d805-0d59-42ce-ac2a-4f9beacd639b"
    },
    "source": [
-    "### Split data into train/test for Fine-tuning"
+    "### Split data into train/test for fine-tuning"
    ]
   },
   {
@@ -211,7 +211,7 @@
     "id": "MzyehWgLQuAq"
    },
    "source": [
-     "Next, we need to split the data into training and testing datasets (to be used later)."
+    "Next, we need to split the data into training and testing datasets (to be used later)."
    ]
   },
   {
@@ -550,7 +550,7 @@
     "id": "85c41457-2f31-4e98-aa55-3a42a478b8e7"
    },
    "source": [
-    "## Test the Fine-tuned model with Batch inference"
+    "## Test the fine-tuned model with batch inference"
    ]
   },
   {
@@ -590,7 +590,7 @@
     "id": "c4f5a51c-fc39-4567-b85d-95a98d5f9c98"
    },
    "source": [
-    "Now that the prompt is defined, it's time to execute the code and run the classification task for each model. In this step, we loop through the list of models, creating the requests and Batch jobs, monitoring progress, and retrieving the results.\n"
+    "Now that the prompt is defined, it's time to execute the code and run the classification task for each model. In this step, we loop through the list of models, creating the requests and batch jobs, monitoring progress, and retrieving the results.\n"
    ]
   },
   {
