--- a/tutorials/klusterai-api/keyword-extraction-api.ipynb
+++ b/tutorials/klusterai-api/keyword-extraction-api.ipynb
@@ -171,7 +171,7 @@
     "id": "OyGuHllZllct"
    },
    "source": [
-    "## Perform Batch inference"
+    "## Perform batch inference"
    ]
   },
   {
@@ -181,11 +181,11 @@
     "id": "6-MZlfXAoiNv"
    },
    "source": [
-    "To run the inference job, we’ll follow three simple steps:\n",
+    "To run the inference job, we'll follow three simple steps:\n",
     "\n",
-    "1. **Create the Batch input file -** we’ll create a file containing the requests to be processed by the model\n",
-    "2. **Upload the Batch input file to kluster.ai -** once the file is ready, we’ll upload it to the kluster.ai platform using the API, where it will be queued for processing\n",
-    "3. **Start the job -** after the upload, we’ll trigger the job to process the data\n",
+    "1. **Create the batch input file** - we'll create a file containing the requests to be processed by the model\n",
+    "2. **Upload the batch input file to kluster.ai** - once the file is ready, we'll upload it to the kluster.ai platform using the API, where it will be queued for processing\n",
+    "3. **Start the job** - after the upload, we'll trigger the job to process the data\n",
     "\n",
     "Everything is preconfigured for you—just execute the cells below to see it all in action."
    ]
@@ -197,7 +197,7 @@
     "id": "Ew-R24Ltp5EW"
    },
    "source": [
-    "### Create the Batch file"
+    "### Create the batch file"
    ]
   },
   {
@@ -542,7 +542,7 @@
    "id": "7d195dd1-1293-4407-b6ad-cab7e77b14c0",
    "metadata": {},
    "source": [
-    "Congratulations! You’ve successfully completed the keyword extraction task using the kluster.ai Batch API. This demonstration highlights how you can effortlessly manage large datasets and extract meaningful insights. With the Batch API, you can scale your workflows smoothly, making it an essential tool for processing large-scale datasets."
+    "Congratulations! You’ve successfully completed the keyword extraction task using the kluster.ai batch API. This demonstration highlights how you can effortlessly manage large datasets and extract meaningful insights. With the batch API, you can scale your workflows smoothly, making it an essential tool for processing large-scale datasets."
    ]
   }
  ],
