--- a/tutorials/klusterai-api/llm-as-a-judge.ipynb
+++ b/tutorials/klusterai-api/llm-as-a-judge.ipynb
@@ -137,7 +137,7 @@
     "These functions will make our evaluation process more efficient and organized. Let's go through each one and understand its purpose.\n",
     "\n",
     "1. **`create_tasks()`** - formats our data for the API\n",
-    "2. **`save_tasks()`** - prepares Batch files for processing\n",
+    "2. **`save_tasks()`** - prepares batch files for processing\n",
     "3. **`monitor_job_status()`** - tracks evaluation progress\n",
     "4. **`get_results()`** - collects and processes model outputs"
    ]
@@ -147,17 +147,17 @@
    "id": "e0ae3e6f-2534-4541-812a-bcfc62a747bc",
    "metadata": {},
    "source": [
-    "### Create and manage Batch files\n",
+    "### Create and manage batch files\n",
     "\n",
-    "A Batch file in our context is a collection of requests that we'll send to our models for evaluation. Think of it as a organized list of tasks we want our models to complete.\n",
+    "A batch file in our context is a collection of requests that we'll send to our models for evaluation. Think of it as a organized list of tasks we want our models to complete.\n",
     "\n",
-    "We'll take the following steps to create Batch files:\n",
+    "We'll take the following steps to create batch files:\n",
     "\n",
     "1. **Creating tasks** - we'll convert each movie description into a format LLMs can process\n",
     "2. **Organizing data** -we'll add necessary metadata and instructions for each task\n",
     "3. **Saving files** - we'll store these tasks in a structured format (JSONL) for processing\n",
     "\n",
-    "Let's break down the key components of our Batch file creation:\n",
+    "Let's break down the key components of our batch file creation:\n",
     "- **`custom_id`** - helps us track individual requests\n",
     "- **`system_prompt`** - provides instructions to the model\n",
     "- **`content`** - the actual text we want to classify\n",
@@ -206,7 +206,7 @@
    "source": [
     "### Upload files to kluster.ai\n",
     "\n",
-    "Now that we've prepared our Batch files, we'll upload them to the <a href=\"https://platform.kluster.ai/\" target=\"_blank\">kluster.ai platform</a> for Batch inference. This step is crucial for:\n",
+    "Now that we've prepared our batch files, we'll upload them to the <a href=\"https://platform.kluster.ai/\" target=\"_blank\">kluster.ai platform</a> for batch inference. This step is crucial for:\n",
     "\n",
     "1. Getting our data to the models\n",
     "2. Setting up the processing queue\n",
@@ -249,7 +249,7 @@
    "source": [
     "### Check job progress\n",
     "\n",
-    "This function provides real-time monitoring of Batch job progress:\n",
+    "This function provides real-time monitoring of batch job progress:\n",
     "\n",
     "- Continuously checks job status via the kluster.ai API\n",
     "- Displays current completion count (completed/total requests)\n",
@@ -315,7 +315,7 @@
     "\n",
     "The `get_results()` function below does the following:\n",
     "\n",
-    "1. Retrieves the completed Batch job results\n",
+    "1. Retrieves the completed batch job results\n",
     "2. Extracts the model's response content from each result\n",
     "3. Returns a list of all model responses"
    ]
@@ -356,7 +356,7 @@
    "id": "abb279d1-ca98-4933-aaec-c41bc1a279f3",
    "metadata": {},
    "source": [
-    "Now that we have covered the core general functions and workflow used for Batch inference, in this guide, we’ll be using the IMDb Top 1000 dataset, which contains information about top-rated movies, including their descriptions and genres. Let's download it and see what it looks like."
+    "Now that we have covered the core general functions and workflow used for batch inference, in this guide, we’ll be using the IMDb Top 1000 dataset, which contains information about top-rated movies, including their descriptions and genres. Let's download it and see what it looks like."
    ]
   },
   {
@@ -437,7 +437,7 @@
    "id": "135f2093-5d10-45c7-a627-3850b55cc4ed",
    "metadata": {},
    "source": [
-    "## Performing Batch inference"
+    "## Performing batch inference"
    ]
   },
   {
@@ -445,7 +445,7 @@
    "id": "f6417258-c279-446c-8060-6f05f07a1572",
    "metadata": {},
    "source": [
-    "In this section, we will perform Batch inference using the previously defined helper functions and the IMDb dataset. The goal is to classify movie genres based on their descriptions using a Large Language Model (LLM).\n",
+    "In this section, we will perform batch inference using the previously defined helper functions and the IMDb dataset. The goal is to classify movie genres based on their descriptions using a Large Language Model (LLM).\n",
     "\n",
     "We define the input prompts for the LLM, which consist of a system prompt outlining the task and user content, which includes a list of movie descriptions from our dataset."
    ]
@@ -472,7 +472,7 @@
    "id": "f99550a3-006a-430d-8f0c-4b4a07b66f79",
    "metadata": {},
    "source": [
-    "Next, we'll create and save the tasks, submit the Batch inference job, and monitor its progress. Once the process is complete, the predictions will be integrated into the dataset."
+    "Next, we'll create and save the tasks, submit the batch inference job, and monitor its progress. Once the process is complete, the predictions will be integrated into the dataset."
    ]
   },
   {
@@ -568,7 +568,7 @@
    "id": "c5750125-8bf6-4a29-8850-60e86e2d767b",
    "metadata": {},
    "source": [
-    "Following the same set of steps as the previous inference, we will create and save the tasks, submit the Batch inference job, and monitor its progress. Once the process is complete, the predictions will also be integrated into the dataset."
+    "Following the same set of steps as the previous inference, we will create and save the tasks, submit the batch inference job, and monitor its progress. Once the process is complete, the predictions will also be integrated into the dataset."
    ]
   },
   {
