--- a/tutorials/klusterai-api/sentiment-analysis-api.ipynb
+++ b/tutorials/klusterai-api/sentiment-analysis-api.ipynb
@@ -25,7 +25,7 @@
     "id": "6d1d06ea-79c1-4f28-b312-0e5aabe18ff3"
    },
    "source": [
-    "This tutorial runs through a Colab Notebook where you'll learn how to use the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> Batch API to perform sentiment analysis on text data. For illustration, we'll use a sample from the Amazon musical instrument reviews dataset to determine the sentiment of each review. You can easily customize this example to work with your own data and specific use cases. This technique allows for efficient processing of small or large datasets, with results neatly categorized using a cutting-edge language model."
+    "This tutorial runs through a Colab Notebook where you'll learn how to use the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> batch API to perform sentiment analysis on text data. For illustration, we'll use a sample from the Amazon musical instrument reviews dataset to determine the sentiment of each review. You can easily customize this example to work with your own data and specific use cases. This technique allows for efficient processing of small or large datasets, with results neatly categorized using a cutting-edge language model."
    ]
   },
   {
@@ -177,7 +177,7 @@
     "id": "OyGuHllZllct"
    },
    "source": [
-    "## Perform Batch inference"
+    "## Perform batch inference"
    ]
   },
   {
@@ -189,8 +189,8 @@
    "source": [
     "To run the inference job, we'll follow three simple steps:\n",
     "\n",
-    "1. **Create the Batch input file** - we'll create a file containing the requests to be processed by the model\n",
-    "2. **Upload the Batch input file to kluster.ai** - once the file is ready, we'll upload it to the kluster.ai platform using the API, where it will be queued for processing\n",
+    "1. **Create the batch input file** - we'll create a file containing the requests to be processed by the model\n",
+    "2. **Upload the batch input file to kluster.ai** - once the file is ready, we'll upload it to the kluster.ai platform using the API, where it will be queued for processing\n",
     "3. **Start the job** - after the upload, we'll trigger the job to process the data\n",
     "\n",
     "Everything has already been set up for you—simply run the cells below and watch it work."
@@ -203,7 +203,7 @@
     "id": "Ew-R24Ltp5EW"
    },
    "source": [
-    "### Create the Batch input file"
+    "### Create the batch input file"
    ]
   },
   {
@@ -548,7 +548,7 @@
    "id": "7d195dd1-1293-4407-b6ad-cab7e77b14c0",
    "metadata": {},
    "source": [
-    "Congratulations on successfully completing the sentiment analysis task with the kluster.ai Batch API! This example demonstrates how simple it is to work with large datasets and derive meaningful insights from them. The Batch API enables you to scale your workflows seamlessly, making it a vital tool for handling large-scale data processing."
+    "Congratulations on successfully completing the sentiment analysis task with the kluster.ai batch API! This example demonstrates how simple it is to work with large datasets and derive meaningful insights from them. The batch API enables you to scale your workflows seamlessly, making it a vital tool for handling large-scale data processing."
    ]
   }
  ],
