--- a/tutorials/klusterai-api/text-classification-curator.ipynb
+++ b/tutorials/klusterai-api/text-classification-curator.ipynb
@@ -27,7 +27,7 @@
     "id": "6d1d06ea-79c1-4f28-b312-0e5aabe18ff3"
    },
    "source": [
-    "This notebook showcases how to use the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> Batch API to classify a data set based on a predefined set of categories. In our example, we use an extract from the IMDB top 1000 movies dataset and categorize them into \"Action,\" \"Adventure,\" \"Comedy,\" \"Crime,\" \"Documentary,\" \"Drama,\" \"Fantasy,\" \"Horror,\" \"Romance,\" or \"Sci-Fi.\" We use a movie dataset, but you can adapt this example by using your data and categories relevant to your use case. With this approach, you can effortlessly process datasets of any scale, from small collections to extensive datasets, and obtain categorized results powered by a state-of-the-art language model.\n"
+    "This notebook showcases how to use the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> batch API to classify a data set based on a predefined set of categories. In our example, we use an extract from the IMDB top 1000 movies dataset and categorize them into \"Action,\" \"Adventure,\" \"Comedy,\" \"Crime,\" \"Documentary,\" \"Drama,\" \"Fantasy,\" \"Horror,\" \"Romance,\" or \"Sci-Fi.\" We use a movie dataset, but you can adapt this example by using your data and categories relevant to your use case. With this approach, you can effortlessly process datasets of any scale, from small collections to extensive datasets, and obtain categorized results powered by a state-of-the-art language model.\n"
    ]
   },
   {
@@ -168,7 +168,7 @@
     "id": "OyGuHllZllct"
    },
    "source": [
-    "## Perform Batch inference with Curator"
+    "## Perform batch inference with Curator"
    ]
   },
   {
@@ -235,7 +235,7 @@
     "id": "7d195dd1-1293-4407-b6ad-cab7e77b14c0"
    },
    "source": [
-    "You've successfully completed the classification request using the kluster.ai Batch API! This process showcases how you can efficiently handle and classify large amounts of data with ease. The Batch API empowers you to scale your workflows seamlessly, making it an invaluable tool for processing extensive datasets."
+    "You've successfully completed the classification request using the kluster.ai batch API! This process showcases how you can efficiently handle and classify large amounts of data with ease. The batch API empowers you to scale your workflows seamlessly, making it an invaluable tool for processing extensive datasets."
    ]
   }
  ],
