--- a/tutorials/klusterai-api/model-comparison.ipynb
+++ b/tutorials/klusterai-api/model-comparison.ipynb
@@ -23,7 +23,7 @@
    "id": "1297a26a-fdb2-48b4-bc1e-d66ec0b40acc",
    "metadata": {},
    "source": [
-    "In this hands-on tutorial, you'll learn how to systematically evaluate Language Models (LLMs) using the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> Batch API. We'll walk through a practical example of comparing different models for a real-world task.\n",
+    "In this hands-on tutorial, you'll learn how to systematically evaluate Language Models (LLMs) using the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> batch API. We'll walk through a practical example of comparing different models for a real-world task.\n",
     "\n",
     "Choosing the right LLM for your specific use case is crucial but can be challenging. While larger models might offer better performance, they often come with higher costs. kluster.ai provides high-performing models at competitive prices, making advanced AI more accessible.\n",
     "\n",
@@ -169,7 +169,7 @@
     "These functions will make our evaluation process more efficient and organized. Let's go through each one and understand its purpose:\n",
     "\n",
     "1. **`create_tasks()`** - formats our data for the API\n",
-    "2. **`save_tasks()`** - prepares Batch files for processing\n",
+    "2. **`save_tasks()`** - prepares batch files for processing\n",
     "3. **`monitor_job_status()`** - tracks evaluation progress\n",
     "4. **`get_results()`** - collects and processes model outputs"
    ]
@@ -179,17 +179,17 @@
    "id": "b386da2f-8f5a-430f-97e0-118928c3faac",
    "metadata": {},
    "source": [
-    "### Create and manage Batch files\n",
+    "### Create and manage batch files\n",
     "\n",
-    "A Batch file in our context is a collection of requests that we'll send to our models for evaluation. Think of it as a organized list of tasks we want our models to complete.\n",
+    "A batch file in our context is a collection of requests that we'll send to our models for evaluation. Think of it as a organized list of tasks we want our models to complete.\n",
     "\n",
-    "We'll take the following steps to create Batch files:\n",
+    "We'll take the following steps to create batch files:\n",
     "\n",
     "1. **Creating tasks** - we'll convert each movie description into a format LLMs can process\n",
     "2. **Organizing data** -we'll add necessary metadata and instructions for each task\n",
     "3. **Saving files** - we'll store these tasks in a structured format (JSONL) for processing\n",
     "\n",
-    "Let's break down the key components of our Batch file creation:\n",
+    "Let's break down the key components of our batch file creation:\n",
     "- **`custom_id`** - helps us track individual requests\n",
     "- **`system_prompt`** - provides instructions to the model\n",
     "- **`content`** - the actual text we want to classify\n",
@@ -240,7 +240,7 @@
    "source": [
     "### Upload files to kluster.ai\n",
     "\n",
-    "Now that we've prepared our Batch files, we'll upload them to the <a href=\"https://platform.kluster.ai/\" target=\"_blank\">kluster.ai platform</a> for Batch inference. This step is crucial for:\n",
+    "Now that we've prepared our batch files, we'll upload them to the <a href=\"https://platform.kluster.ai/\" target=\"_blank\">kluster.ai platform</a> for batch inference. This step is crucial for:\n",
     "\n",
     "1. Getting our data to the models\n",
     "2. Setting up the processing queue\n",
@@ -291,7 +291,7 @@
    "id": "b35d9a1d",
    "metadata": {},
    "source": [
-    "This function provides real-time monitoring of Batch job progress:\n",
+    "This function provides real-time monitoring of batch job progress:\n",
     "\n",
     "- Continuously checks job status via the kluster.ai API\n",
     "- Displays current completion count (completed/total requests)\n",
@@ -357,7 +357,7 @@
     "\n",
     "The `get_results()` function below does the following:\n",
     "\n",
-    "1. Retrieves the completed Batch job results\n",
+    "1. Retrieves the completed batch job results\n",
     "2. Extracts the model's response content from each result\n",
     "3. Returns a list of all model responses\n",
     "\n"
@@ -391,7 +391,7 @@
     "id": "udPtLfTaisSw"
    },
    "source": [
-    "## Prepare a real dataset for Batch inference"
+    "## Prepare a real dataset for batch inference"
    ]
   },
   {
@@ -399,7 +399,7 @@
    "id": "e6b9ad42-cc58-4054-a510-af09a8592635",
    "metadata": {},
    "source": [
-    "Now that we have covered the core general functions and workflow used for Batch inference, in this guide, we'll use the IMDb Top 1000 dataset. This dataset contains information about top-rated movies, including their descriptions and genres. Let's download it and see what it looks like."
+    "Now that we have covered the core general functions and workflow used for batch inference, in this guide, we'll use the IMDb Top 1000 dataset. This dataset contains information about top-rated movies, including their descriptions and genres. Let's download it and see what it looks like."
    ]
   },
   {
@@ -492,7 +492,7 @@
    "id": "4fe66a82-afc0-4fea-9b73-f33fe93f3e89",
    "metadata": {},
    "source": [
-    "## Perform Batch inference"
+    "## Perform batch inference"
    ]
   },
   {
@@ -627,7 +627,7 @@
     "\n",
     "- **Model evaluation process** - how to systematically compare LLM performance, using accuracy as a key metric and implementing batch inference for efficient evaluation\n",
     "- **Cost-performance balance** - larger models aren’t always significantly better; the importance of considering cost-effectiveness and making data-driven model selections\n",
-    "- **Practical implementations** - using the kluster.ai Batch API effectively, processing large datasets efficiently, and making informed decisions based on results\n",
+    "- **Practical implementations** - using the kluster.ai batch API effectively, processing large datasets efficiently, and making informed decisions based on results\n",
     "\n",
     "With this knowledge, you are now equipped to:\n",
     "\n",
