--- a/tutorials/klusterai-api/multiple-tasks-batch-api.ipynb
+++ b/tutorials/klusterai-api/multiple-tasks-batch-api.ipynb
@@ -25,7 +25,7 @@
     "id": "6d1d06ea-79c1-4f28-b312-0e5aabe18ff3"
    },
    "source": [
-    "This tutorial runs through a Colab Notebook where you'll learn how to use the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> Batch API to extract insights from large volumes of text data. By the end of this guide, you'll be able to summarize a dataset, generate keywords, translate text to another language (in this case, English to Spanish), classify the text, and extract the relevant keywords all without writing a single line of code. Whether you're familiar with LLMs or just getting started, this guide is designed to get you up and running in minutes.\n",
+    "This tutorial runs through a Colab Notebook where you'll learn how to use the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> batch API to extract insights from large volumes of text data. By the end of this guide, you'll be able to summarize a dataset, generate keywords, translate text to another language (in this case, English to Spanish), classify the text, and extract the relevant keywords all without writing a single line of code. Whether you're familiar with LLMs or just getting started, this guide is designed to get you up and running in minutes.\n",
     "\n",
     "In this guide, you'll follow just two simple steps:\n",
     "\n",
@@ -382,7 +382,7 @@
     "id": "OyGuHllZllct"
    },
    "source": [
-    "## Perform Batch inference"
+    "## Perform batch inference"
    ]
   },
   {
@@ -396,8 +396,8 @@
     "\n",
     "To execute the request, we'll follow three straightforward steps:\n",
     "\n",
-    "1. **Create the Batch input file** - we'll generate a file with the desired requests to be processed by the model\n",
-    "2. **Upload the Batch input file to kluster.ai** - once the file is ready, we'll upload it to the <a href=\"https://platform.kluster.ai/\" target=\"_blank\">kluster.ai platform</a> using the API, where it will be queued for processing\n",
+    "1. **Create the batch input file** - we'll generate a file with the desired requests to be processed by the model\n",
+    "2. **Upload the batch input file to kluster.ai** - once the file is ready, we'll upload it to the <a href=\"https://platform.kluster.ai/\" target=\"_blank\">kluster.ai platform</a> using the API, where it will be queued for processing\n",
     "3. **Start the job** - after the file is uploaded, we'll initiate the job to process the uploaded data\n",
     "\n",
     "Everything is set up for you – just run the cells below to watch it all come together."
@@ -410,7 +410,7 @@
     "id": "Ew-R24Ltp5EW"
    },
    "source": [
-    "### Create the Batch input file"
+    "### Create the batch input file"
    ]
   },
   {
@@ -1023,7 +1023,7 @@
    "id": "d42bcd40",
    "metadata": {},
    "source": [
-    "You've successfully completed the multiple tasks request using the kluster.ai Batch API! This guide demonstrated how to extract valuable insights from large text datasets, such as sentiment analysis, translation, summarization, topic classification, and keyword extraction."
+    "You've successfully completed the multiple tasks request using the kluster.ai batch API! This guide demonstrated how to extract valuable insights from large text datasets, such as sentiment analysis, translation, summarization, topic classification, and keyword extraction."
    ]
   }
  ],
