--- a/tutorials/klusterai-api/text-classification-api.ipynb
+++ b/tutorials/klusterai-api/text-classification-api.ipynb
@@ -238,7 +238,7 @@
       "source": [
         "This example selects the `klusterai/Meta-Llama-3.3-70B-Instruct-Turbo` model. If you'd like to use a different model, feel free to change it by modifying the `model` field in the `body` of the request.\n",
         "\n",
-        "Please refer to our <a href=\"/get-started/start-building/batch/#supported-models\" target=\"_blank\">documentation</a> for a list of the models we support.\n",
+        "Please refer to the <a href=\"/get-started/start-building/batch/#supported-models\" target=\"_blank\">Supported models</a> section for a list of the models we support.\n",
         "\n",
         "The following snippets create the batch job file, prepared as a JSON Lines file."
       ]
