revise text classification with grammarly

--- a/tutorials/klusterai-api/text-classification/text-classification-openai-api.ipynb
+++ b/tutorials/klusterai-api/text-classification/text-classification-openai-api.ipynb
@@ -27,7 +27,7 @@
     "id": "6d1d06ea-79c1-4f28-b312-0e5aabe18ff3"
    },
    "source": [
-    "Text classification is the task of assigning a class/label to a given text, and it is a common go-to example to demonstrate how helpful an AI model can be.\n",
+    "Text classification is assigning a class/label to a given text, and it is a common go-to example to demonstrate how helpful an AI model can be.\n",
     "\n",
     "This tutorial runs through a notebook where you'll learn how to use the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> batch API to classify a dataset based on a predefined set of categories.\n",
     "\n",
@@ -76,7 +76,7 @@
     "id": "4185a24a"
    },
    "source": [
-    "In this notebook, we'll use Python's `getpass` module to input the key safely. After execution, please provide your unique kluster.ai API key (ensure no spaces)."
+    "In this notebook, we'll use Python's `getpass` module to safely input the key. After execution, please provide your unique kluster.ai API key (ensure no spaces)."
    ]
   },
   {
@@ -198,7 +198,7 @@
     "id": "QjCVfg65jKz6"
    },
    "source": [
-    "Now that you've initialized an OpenAI-complatible client pointing to kluster.ai, we can talk about the data.\n",
+    "Now that you've initialized an OpenAI-compatible client pointing to kluster.ai, we can talk about the data.\n",
     "\n",
     "This notebook includes a preloaded sample dataset derived from the Top 1000 IMDb Movies dataset. It contains movie descriptions ready for classification. No additional setup is needed. Simply proceed to the next steps to begin working with this data."
    ]
@@ -243,12 +243,12 @@
     "To execute the batch inference job, we'll take the following steps:\n",
     "\n",
     "1. **Create the batch job file** - we'll generate a JSON lines file with the desired requests to be processed by the model\n",
-    "2. **Upload the batch job file** - once the file is ready, we'll upload it to the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> using the API, where it will be queued for processing. We'll receive a unique ID associated with our file\n",
+    "2. **Upload the batch job file** - once it is ready, we'll upload it to the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> using the API, where it will be processed. We'll receive a unique ID associated with our file\n",
     "3. **Start the batch job** - after the file is uploaded, we'll initiate the job to process the uploaded data, using the file ID obtained before\n",
-    "4. **Monitor job progress** - (optional) track the status of the batch job to ensure it has successfully completed\n",
+    "4. **Monitor job progress** - (optional) track the status of the batch job to ensure it has been successfully completed\n",
     "5. **Retrieve results** - once the job has completed execution, we can access and process the resultant data\n",
     "\n",
-    "This notebook is prepared for you to follow along, just run the cells below to watch it all come together."
+    "This notebook is prepared for you to follow along. Run the cells below to watch it all come together."
    ]
   },
   {
@@ -268,11 +268,11 @@
     "id": "qS4JXT52wGJ-"
    },
    "source": [
-    "This example selects the `deepseek-ai/DeepSeek-V3` model. If you'd like to use a different model, feel free to change it by modifying the `model` field. In this notebook, you can also just comment DeepSeek V3, and uncomment whatever model you want to try out.\n",
+    "This example selects the `deepseek-ai/DeepSeek-V3` model. If you'd like to use a different model, feel free to change it by modifying the `model` field. In this notebook, you can also comment DeepSeek V3, and uncomment whatever model you want to try out.\n",
     "\n",
     "Please refer to the <a href=\"/get-started/start-building/batch/#supported-models\" target=\"_blank\">Supported models</a> section for a list of the models we support.\n",
     "\n",
-    "The following snippets prepares the JSONL file, where each line represents a different request. Note that each separate batch request can have its own model. Also, we are using a temperature of `0.5` but feel free to change it and play around with the different outcomes (but we are only asking to respond with a single word, the genre)."
+    "The following snippets prepare the JSONL file, where each line represents a different request. Note that each separate batch request can have its own model. Also, we are using a temperature of `0.5` but feel free to change it and play around with the different outcomes (but we are only asking to respond with a single word, the genre)."
    ]
   },
   {
@@ -406,7 +406,7 @@
     "id": "e48b2489-99bc-431b-8cb3-de816550d524"
    },
    "source": [
-    "Now that we’ve prepared our input file, it’s time to upload it to the kluster.ai platform. To do so, can us ethe `files.create` endpoint of the client, where the purpose is set to `batch`. This will return the file ID, which we need to log for the next steps."
+    "Now that we’ve prepared our input file, it’s time to upload it to the kluster.ai platform. To do so, you can use the `files.create` endpoint of the client, where the purpose is set to `batch`. This will return the file ID, which we need to log for the next steps."
    ]
   },
   {
