revise curator grammarly

--- a/tutorials/klusterai-api/text-classification/text-classification-curator.ipynb
+++ b/tutorials/klusterai-api/text-classification/text-classification-curator.ipynb
@@ -27,7 +27,7 @@
         "id": "6d1d06ea-79c1-4f28-b312-0e5aabe18ff3"
       },
       "source": [
-        "This notebook goes through the same example as in our previous <a href=\"/tutorials/klusterai-api/text-classification-api/\" target=\"_blank\">Text clasification notebook</a>, but this time, we'll be using Bespoke Curator instead of the OpenAI Python library\n",
+        "This notebook goes through the same example as in our previous <a href=\"/tutorials/klusterai-api/text-classification-api/\" target=\"_blank\">Text classification notebook</a>, but this time, we'll be using Bespoke Curator instead of the OpenAI Python library\n",
         "\n",
         "To recap, the notebook uses <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> batch API to classify a data set based on a predefined set of categories.\n",
         "\n",
@@ -200,9 +200,9 @@
       "source": [
         "With the Curator LLM object ready, let's define the data and prompt.\n",
         "\n",
-        "This notebook includes a preloaded sample dataset derived from the Top 1000 IMDb Movies dataset. It contains movie descriptions ready for classification. No additional setup is needed. Simply proceed to the next steps to begin working with this data.\n",
+        "This notebook includes a preloaded sample dataset derived from the Top 1000 IMDb Movies dataset. It contains movie descriptions ready for classification. No additional setup is needed. Proceed to the next steps to begin working with this data.\n",
         "\n",
-        "For this particular scenario, the prompt consists of the request to the model, plus the data (movie) to be classified. Because this is a batch job, each separate request must contain both things."
+        "For this particular scenario, the prompt consists of the request to the model and the data (movie) to be classified. Because this is a batch job, each separate request must contain both."
       ]
     },
     {
@@ -719,7 +719,7 @@
       "source": [
         "This tutorial used the chat completion endpoint and Bespoke Curator to perform a simple text classification task with batch inference. This particular example clasified a series of movies based on their description.\n",
         "\n",
-        "By using Curator, submitting a batch job is extremely simple, as it handles all the steps of creating the file, uploading it, submitting the batch job, monitoring the job, and retrieving results. Moreso, kluster.ai is natively supported, making things even easier!\n",
+        "Using Curator, submitting a batch job is extremely simple. It handles all the steps of creating the file, uploading it, submitting the batch job, monitoring the job, and retrieving results. Moreover, kluster.ai is natively supported, making things even easier!\n",
         "\n",
         "\n",
         "Kluster.ai's batch API empowers you to scale your workflows seamlessly, making it an invaluable tool for processing extensive datasets. As next steps, feel free to create your own dataset, or expand on top of this existing example. Good luck!"
