--- a/tutorials/klusterai-api/multiple-tasks-batch-api.ipynb
+++ b/tutorials/klusterai-api/multiple-tasks-batch-api.ipynb
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter your kluster.ai API key:  ········\n"
@@ -182,11 +182,11 @@
     "id": "QjCVfg65jKz6"
    },
    "source": [
-    "In this section, you can choose from three different datasets. Simply select the URL corresponding to the dataset you want, and the notebook will automatically fetch it for you. No extra steps are needed.\n",
-    "\n",
     "Now that you've initialized an OpenAI-compatible client pointing to kluster.ai, we can talk about the data.\n",
     "\n",
-    "This notebook includes three sample datasets: Amazon musical instruments reviews, Top 1000 IMDb Movies, and AG News sample. For this example, we are only using the last 5 data points of a single data sample, but feel free to change this or bring your dataset."
+    "This notebook includes three sample datasets: Amazon musical instruments reviews, Top 1000 IMDb Movies, and AG News sample.\n",
+    "\n",
+    "The following code fetches the data and last 5 data points of a single data sample. Feel free to change this or bring your own dataset."
    ]
   },
   {
