--- a/tutorials/klusterai-api/keyword-extraction-api.ipynb
+++ b/tutorials/klusterai-api/keyword-extraction-api.ipynb
@@ -25,11 +25,11 @@
     "id": "6d1d06ea-79c1-4f28-b312-0e5aabe18ff3"
    },
    "source": [
-    "One simple but powerful usecase for AI models is keyword extraction, in which you feed the model a large dataset and ask it to provide a given number of keywords.\n",
+    "One simple but powerful use case for AI models is keyword extraction, in which you feed the model a large dataset and ask it to provide a given number of keywords.\n",
     "\n",
-    "This tutorial runs through a notebook where you'll learn how to use the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> batch API obtain keywords from a given dataset.\n",
+    "This tutorial runs through a notebook where you'll learn how to use the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> batch API to obtain keywords from a given dataset.\n",
     "\n",
-    "The example uses an extract from AG News dataset. You can adapt this example by using your data and categories relevant to your use case. With this approach, you can effortlessly process datasets of any scale, big or small, to obtain keywords. All powered by a state-of-the-art language model."
+    "The example uses an extract from AG News dataset. You can adapt this example by using the data and categories that are relevant to your use case. With this approach, you can effortlessly process datasets of any scale, big or small, to obtain keywords. All powered by a state-of-the-art language model."
    ]
   },
   {
@@ -174,12 +174,12 @@
    "source": [
     "Now that you've initialized an OpenAI-compatible client pointing to kluster.ai, we can talk about the data.\n",
     "\n",
-    "This notebook comes with a preloaded sample dataset based on the AG News dataset. It includes sections of news headlines and their leads, all set for processing. There’s no extra setup required—just move on to the next steps to start working with the data."
+    "This notebook comes with a preloaded sample dataset based on the AG News dataset. It includes sections of news headlines and their leads, all set for processing. No additional setup is needed. Proceed to the next steps to begin working with this data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "07018f92-9a01-47d5-916a-12cd03dfa3a0",
    "metadata": {},
    "outputs": [],
@@ -244,12 +244,12 @@
     "\n",
     "Please refer to the <a href=\"/get-started/start-building/batch/#supported-models\" target=\"_blank\">Supported models</a> section for a list of the models we support.\n",
     "\n",
-    "The following snippets prepare the JSONL file, where each line represents a different request. Note that each separate batch request can have its own model. Also, we are using a temperature of `0.5` but feel free to change it and play around with the different outcomes (but we are only asking to respond with a single word, the genre)."
+    "The following snippets prepare the JSONL file, where each line represents a different request. Note that each separate batch request can have its model. Also, we are using a temperature of `0.5` but feel free to change it and play around with the different outcomes (but we are only asking to respond with a single word, the genre)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "fVtwyqZ_nEq7",
    "metadata": {},
    "outputs": [],
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "qNhmrmHdnp7g",
    "metadata": {},
    "outputs": [],
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "d65f5099-5add-4749-9a85-3c04a9b342bb",
    "metadata": {},
    "outputs": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "l5eu5UyAnEtk",
    "metadata": {},
    "outputs": [
@@ -374,7 +374,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File uploaded successfully. File ID: 67e286436836c9f33197fd30\n"
+      "File uploaded successfully. File ID: 67e40f05331c771bde3bca69\n"
      ]
     }
    ],
@@ -408,12 +408,12 @@
    "id": "251a0b89-71a9-40d7-bf14-51be935afe10",
    "metadata": {},
    "source": [
-    "Once the file has been successfully uploaded, we're ready to start (create) the batch job by providing the file ID we got in the previous step. To do so, we use the `batches.create` method, for which we need to set the endpoint to `/v1/chat/completions`. This will return the batch job details, with the ID."
+    "Once the file has been successfully uploaded, we're ready to start (create) the batch job by providing the file ID we got in the previous step. To do so, we use the `batches.create` method, for which we need to set the endpoint to `/v1/chat/completions`. This will return the batch job details with the ID."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "71a24704-7190-4e24-898f-c4eff062439a",
    "metadata": {},
    "outputs": [
@@ -424,11 +424,11 @@
       "\n",
       "Batch job created:\n",
       "{\n",
-      "  \"id\": \"67e28645825ee61ccb69e952\",\n",
+      "  \"id\": \"67e40f070997f511a77bf70b\",\n",
       "  \"completion_window\": \"24h\",\n",
-      "  \"created_at\": 1742898757,\n",
+      "  \"created_at\": 1742999303,\n",
       "  \"endpoint\": \"/v1/chat/completions\",\n",
-      "  \"input_file_id\": \"67e286436836c9f33197fd30\",\n",
+      "  \"input_file_id\": \"67e40f05331c771bde3bca69\",\n",
       "  \"object\": \"batch\",\n",
       "  \"status\": \"pre_schedule\",\n",
       "  \"cancelled_at\": null,\n",
@@ -437,7 +437,7 @@
       "  \"error_file_id\": null,\n",
       "  \"errors\": [],\n",
       "  \"expired_at\": null,\n",
-      "  \"expires_at\": 1742985157,\n",
+      "  \"expires_at\": 1743085703,\n",
       "  \"failed_at\": null,\n",
       "  \"finalizing_at\": null,\n",
       "  \"in_progress_at\": null,\n",
@@ -449,6 +449,15 @@
       "    \"total\": 0\n",
       "  }\n",
       "}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/alberto/.venv/lib/python3.10/site-packages/pydantic/main.py:426: UserWarning: Pydantic serializer warnings:\n",
+      "  Expected `Errors` but got `list` with value `[]` - serialized value may not be as expected\n",
+      "  return self.__pydantic_serializer__.to_python(\n"
      ]
     }
    ],
@@ -484,21 +493,21 @@
    "source": [
     "Now that your batch job has been created, you can track its progress.\n",
     "\n",
-    "To monitor the job's progress, we can use the `batches.retrieve` method and pass the batch job ID. The response contains an `status` field that tells us if it is completed or not, and the subsequent status of each job separately.\n",
+    "To monitor the job's progress, we can use the `batches.retrieve` method and pass the batch job ID. The response contains a `status` field that tells us if it is completed or not and the subsequent status of each job separately.\n",
     "\n",
     "The following snippet checks the status every 10 seconds until the entire batch is completed:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "SuH0CfoqjP3d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Job completed!'"
+       "'Job status: in_progress - Progress: 1/5'"
       ]
      },
      "metadata": {},
@@ -547,29 +556,15 @@
    "id": "12c1f6ac-8d60-4158-9036-de79fa274983",
    "metadata": {},
    "source": [
-    "With the job completed, we'll retrieve the results and review the responses generated for each request. The results are parsed. To fetch the results from the platform, you need to retrieve the `output_file_id` from the batch job, and then use the `files.content` endpoint, providing that specific file ID. Note that the job status must be `completed` for you to retrieve the results!"
+    "With the job completed, we'll retrieve the results and review the responses generated for each request. The results are parsed. To fetch the results from the platform, you need to retrieve the `output_file_id` from the batch job and then use the `files.content` endpoint, providing that specific file ID. Note that the job status must be `completed` to retrieve the results!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "806a5eb1-f6d3-491d-b051-9d44bf046a7e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Extracted Responses:\n",
-      "\"Chorus Frog\", \"Virginia\", \"Southern chorus frog\", \"Beaufort County\", \"North Carolina\"\n",
-      "\"expedition\", \"Gulf of Mexico\", \"advanced technology\", \"deep sea\", \"new discoveries\"\n",
-      "\"Wildfires\", \"California spotted owls\", \"Logging\", \"Sierra Nevada\", \"Forest Service\"\n",
-      "\"Earthquakes\", \"Prediction\", \"Metals\", \"Subsoil Water\", \"Geologists\"\n",
-      "\"Marine Expedition\", \"New Species\", \"Atlantic Ocean\", \"Marine Ecosystems\", \"Norwegian Scientists\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Parse results as a JSON object\n",
     "def parse_json_objects(data_string):\n",
@@ -631,7 +626,7 @@
    "id": "7d195dd1-1293-4407-b6ad-cab7e77b14c0",
    "metadata": {},
    "source": [
-    "This tutorial used the chat completion endpoint to perform a simple keyword extraction task with batch inference. This particular example extracted keywords from a AG News dataset.\n",
+    "This tutorial used the chat completion endpoint to perform a simple keyword extraction task with batch inference. This particular example extracted keywords from an AG News dataset.\n",
     "\n",
     "To submit a batch job we've:\n",
     "\n",
@@ -642,7 +637,7 @@
     "\n",
     "All of this using the OpenAI Python library and API, no changes needed!\n",
     "\n",
-    "Kluster.ai's batch API empowers you to scale your workflows seamlessly, making it an invaluable tool for processing extensive datasets. As next steps, feel free to create your own dataset, or expand on top of this existing example. Good luck!"
+    "Kluster.ai's batch API empowers you to scale your workflows seamlessly, making it an invaluable tool for processing extensive datasets. As the next steps, feel free to create your dataset or expand on this example. Good luck!"
    ]
   }
  ],
